# new-lambda-project

./: Cargo.toml  Makefile
src/: db_handler.rs  main.rs
