[package]
name = "new-lambda-project"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.7"
lambda_runtime = "0.7"
serde_json = "1.0.95"
tokio = { version = "1", features = ["macros"] }
tokio-postgres = "0.7.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
